applied changes suggested by coderabbit

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,6 +12,6 @@
         "resolveJsonModule": true,
         "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts", "drizzle.config.ts"],
+    "include": ["src/**/*.ts"],
     "exclude": ["node_modules"]
 }
